--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.1",
+    "dayjs": "^1.11.7",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "moment": "^2.29.4",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
