--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js"
   },
-  "author": "",
+  "author": "ovang",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "mysql2": "^3.0.1",
+    "nodemon": "^2.0.20",
+    "sequelize": "^6.28.0",
+    "sequelize-cli": "^6.5.2"
   }
 }
